syntax = "proto3";
// build 编译包名
option java_package = "com.r3inb.pb";
// build 类名
option java_outer_classname = "Tap";

option java_multiple_files = true;

package event;

service Event {
  rpc EventReq (EventRequest) returns (stream EventResponse);
}

message EventResponse {
  EventType type = 1;
  enum EventType {
    TAP = 0;
    SWIPE = 1;
    RELEASE = 2;
    KEYBOARD = 3;
  }
  int32 x = 2;
  int32 y = 3;
  int32 contact = 4;
  int64 ts = 5;
}

// r
message EventRequest {
  string id = 2;
  int32 type = 3;
}